SecurityGroup.yml
AWSTemplateFormatVersion: "2010-09-09"
Resources:
###
#SecurityGroup outbound
### 
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: ALB-SecurityGroup
      GroupDescription: ALB-SecurityGroup
      VpcId: !ImportValue VPCCIDR
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
  WebSVSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: WebSV-SecurityGroup
      GroupDescription: WebSV-SecurityGroup
      VpcId: !ImportValue VPCCIDR
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
  RDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: RDS-SecurityGroup
      GroupDescription: RDS-SecurityGroup
      VpcId: !ImportValue VPCCIDR
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
###
#SecurityGroup inbound
### 
  ALBSecurityGroupIngress1:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt ALBSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt WebSVSecurityGroup.GroupId
      IpProtocol: -1
###
# Setup SSH in ALB
###
  # ALBSecurityGroupIngress2:
  #   Type: AWS::EC2::SecurityGroupIngress
  #   Properties:
  #     GroupId: !GetAtt ALBSecurityGroup.GroupId
  #     IpProtocol: tcp
  #     FromPort: 22
  #     ToPort: 22
  #     CidrIp: グローバルIP/32
  ALBSecurityGroupIngress3:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt ALBSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      CidrIp: 0.0.0.0/0
  WebSecurityGroupIngress1:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt WebSVSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt ALBSecurityGroup.GroupId
      IpProtocol: -1
###
# Setup SSH in EC2
###
  # WebSecurityGroupIngress2:
  #   Type: AWS::EC2::SecurityGroupIngress
  #   Properties:
  #     GroupId: !GetAtt WebSVSecurityGroup.GroupId
  #     IpProtocol: tcp
  #     FromPort: 22
  #     ToPort: 22
  #     CidrIp: グローバルIP/32
  WebSecurityGroupIngress3:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt WebSVSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt RDSSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 3306
      ToPort: 3306
  RDSSecurityGroupIngress1:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt RDSSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt WebSVSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 3306
      ToPort: 3306
Outputs:
  ALBSecurityGroupOutput:
    Value:  
      Ref: ALBSecurityGroup
    Export:
      Name: ALBSG
  WebSVSecurityGroupOutput:
    Value:  
      Ref: WebSVSecurityGroup
    Export:
      Name: WebSVSG
  RDSSecurityGroupOutput:
    Value:  
      Ref: RDSSecurityGroup
    Export:
      Name: RDSSG
